--- a/src/pages/Ide.module.css
+++ b/src/pages/Ide.module.css
@@ -1,4 +1,36 @@
 main {
   display: grid;
-  grid-template-columns: 15% 80%;
+  grid-template-columns: 15% 85%;
+}
+
+.sidebar{
+  background-color: #222831;
+  min-height: 100vh;
+  max-height: 100vh;
+  display: grid;
+  grid-template-rows: 5% 95%;
+}
+
+.logo{
+
+}
+
+.tools{
+  overflow-y: scroll;
+}
+
+.env{
+  background-color: #393e46;
+  display: grid;
+  grid-template-rows: 5% 95%;
+  min-height: 100vh;
+  max-height: 100vh;
+}
+
+.actions{
+  background-color: #1e9ba0;
+}
+
+.workspace{
+
 }
