--- a/src/pages/Ide.module.css
+++ b/src/pages/Ide.module.css
@@ -8,13 +8,17 @@ main {
   min-height: 100vh;
   max-height: 100vh;
   display: grid;
-  grid-template-rows: 5% 95%;
+  grid-template-rows: 15% 85%;
 }
 
-.logo {}
+.logo {
+  width: 100%;
+  height: 100%;
+}
 
-.tools {
-  overflow-y: scroll;
+.logo>img {
+  width: 100%;
+  height: 100%;
 }
 
 .env {
