--- a/src/pages/Ide.module.css
+++ b/src/pages/Ide.module.css
@@ -8,7 +8,7 @@ main {
   min-height: 100vh;
   max-height: 100vh;
   display: grid;
-  grid-template-rows: 15% 85%;
+  grid-template-rows: 20% 80%;
 }
 
 .logo {
@@ -17,7 +17,9 @@ main {
 }
 
 .logo>img {
-  width: 100%;
+  display:block;
+  margin: 0 auto;
+  width: 80%;
   height: 100%;
 }
 
