se cambio la liberia para dnd, se cambio el diseño, y logica de la porgramacion por bloque

--- a/src/components/Action/Action.module.scss
+++ b/src/components/Action/Action.module.scss
@@ -1,12 +1,17 @@
-ul{
+.actions {
+    background: #1e9ba0;
+}
+
+ul {
     display: flex;
     flex-direction: row;
     align-items: center;
     margin: 0 auto;
     height: 100%;
 }
-ul>*{
+
+ul>* {
     padding: 0 0.5em;
-    margin: 0 0.2em; 
+    margin: 0 0.2em;
     cursor: pointer;
 }
