--- a/src/index.scss
+++ b/src/index.scss
@@ -65,6 +65,29 @@ code {
   border-bottom-left-radius: .3rem;
 }
 
+.container {
+  min-height: 100px;
+  width: 50%;
+  padding: 0.1em;
+  display: flex;
+  justify-content: center;
+
+  .smooth-dnd-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .smooth-dnd-draggable-wrapper {
+      width: 100%;
+
+      div {
+        width: 100%;
+      }
+    }
+  }
+}
+
 ::-webkit-scrollbar {
   width: 5px;
 }
