--- a/src/pages/Ide.module.css
+++ b/src/pages/Ide.module.css
@@ -1,38 +1,15 @@
 main {
   display: grid;
-  grid-template-columns: 15% 85%;
-}
-
-.sidebar {
-  background-color: var(--primary-dark);
-  min-height: 100vh;
+  grid-template-columns: 20% 60% 20%;
+  height: 100vh;
   max-height: 100vh;
-  display: grid;
-  grid-template-rows: 20% 80%;
+  max-width: 100%;
 }
 
-.logo {
-  width: 100%;
-  height: 100%;
+.workspace {
+  background: #393e46;
 }
 
-.logo>img {
-  display:block;
-  margin: 0 auto;
-  width: 80%;
-  height: 100%;
+.functions {
+  background: #222831;
 }
-
-.env {
-  background-color: var(--primary);
-  display: grid;
-  grid-template-rows: 5% 95%;
-  min-height: 100vh;
-  max-height: 100vh;
-}
-
-.actions {
-  background-color: var(--accent);
-}
-
-.workspace {}
