--- a/src/components/SideTools/SideTools.module.scss
+++ b/src/components/SideTools/SideTools.module.scss
@@ -1,7 +1,7 @@
 .side {
   margin: 0;
   display: grid;
-  grid-template-rows: 200px 1fr;
+  grid-template-rows: 200px;
   background: #222831;
   overflow-y: scroll;
 }
@@ -20,19 +20,16 @@
   align-items: center;
 
   .statements {
-    flex: 1 1 auto;
 
     &>div {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-      align-content: center;
+      min-height: 100%;
 
-      div {
-        display: flex;
-        height: 50px;
+      &>div {
+        display: flex !important;
+        height: 70px;
         align-items: center;
+        justify-content: center;
+        align-content: center;
       }
     }
   }
@@ -52,6 +49,15 @@
   text-transform: capitalize;
   justify-content: center;
   text-align: center;
+  cursor: grab;
+
+  &:active {
+    cursor: grabbing;
+  }
+
+  /* & {
+    
+  } */
 
   h3 {
     margin: 0;
