--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -76,6 +76,15 @@
   }
 }
 
+.forClass {
+  display: flex;
+  flex-direction: row;
+
+  &>label {
+    margin: 0.4em 0.2em;
+  }
+}
+
 .slider {
   position: absolute;
   cursor: pointer;
@@ -95,6 +104,26 @@
     bottom: 4px;
     background-color: white;
     transition: .4s;
+  }
+}
+
+.functionArea {
+  margin-top: 1em;
+
+  &>div:nth-child(1) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+}
+
+.functionSelection {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  &>* {
+    margin: 0em 0.2em;
   }
 }
 
