--- a/src/components/SideTools/SideTools.module.scss
+++ b/src/components/SideTools/SideTools.module.scss
@@ -38,7 +38,7 @@
 
 .placeholder {
   display: flex;
-  background: #393e30;
+  background: #1e9ba0;
   width: 150px;
   height: 50px;
   margin: 0 auto;
