--- a/src/pages/Ide.module.scss
+++ b/src/pages/Ide.module.scss
@@ -1,6 +1,6 @@
 main {
   display: grid;
-  grid-template-columns: 20% 60% 20%;
+  grid-template-columns: 20% 80%;
   height: 100vh;
   max-height: 100vh;
   max-width: 100%;
@@ -8,8 +8,4 @@ main {
 
 .workspace {
   background: #393e46;
-}
-
-.functions {
-  background: #222831;
 }
