--- a/src/components/Card/DeclareCard/DeclareCard.module.scss
+++ b/src/components/Card/DeclareCard/DeclareCard.module.scss
@@ -1,6 +1,6 @@
 .content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-content: center;
+  &>* {
+    width: 70%;
+    margin: 0 auto;
+  }
 }
